--- a/css/moblie.css
+++ b/css/moblie.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
 body {
     overflow-x: hidden;
     touch-action: none;
@@ -23,6 +25,7 @@ button {
 img {
     width: 100%;
     object-fit: cover;
+    display: block;
 }
 
 .inner {
@@ -168,7 +171,7 @@ img {
     color: #fff;
 }
 
-.car_menu>ul>li{
+.car_menu>ul>li {
     padding: 14px 0;
 }
 
@@ -191,22 +194,26 @@ main {
     width: 100%;
     padding-top: 60px;
 }
-.vis_slide{
+
+.vis_slide {
     width: 100%;
     max-width: 750px;
 }
-.swiper-slide{
+
+.swiper-slide {
     position: relative;
 }
-.text_wrap{
+
+.text_wrap {
     position: absolute;
     left: 20px;
     bottom: 18%;
     display: flex;
     justify-content: space-between;
 }
-.text_wrap p{
-    color:#fff;
+
+.text_wrap p {
+    color: #fff;
     font-family: 'Noto Sans KR', sans-serif;
     letter-spacing: -0.25px;
     display: block;
@@ -214,32 +221,118 @@ main {
     font-size: 1em;
     white-space: nowrap;
 }
-.text_wrap > button{
+
+.text_wrap>button {
     margin-left: 40px;
 }
-.text_wrap .tit{
+
+.text_wrap .tit {
     font-size: 2.63em;
     font-weight: bold;
 }
-.swiper-pagination-bullet{
+
+.swiper-pagination-bullet {
     width: 10px;
     height: 10px;
     border: 1px solid #fff;
     background: none;
     opacity: 1;
 }
-.swiper-pagination-bullet-active{
+
+.swiper-pagination-bullet-active {
     width: 24px;
     height: 10px;
     border-radius: 20px;
     background: #fff;
     transition: 1s;
 }
-.page{
+
+.page {
     display: flex;
     align-items: center;
     position: absolute;
     left: 20px !important;
     bottom: 12% !important;
 }
+
+.series {
+    padding: 60px 0 24px 0;
+}
+
+.tit_text {
+    font-size: 1.75em;
+    display: block;
+    font-family: 'Noto Sans KR', sans-serif;
+    margin-bottom: 10px;
+    line-height: 32px;
+    font-weight: bold;
+}
+
+.sub_text {
+    font-size: 1.25em;
+    line-height: 24px;
+}
+
+.container {
+    margin-top: 24px;
+}
+
+.scroll_wrap{
+    display: flex;
+    height: 100%;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    border-radius: 10px;
+}
+.scroll-area {
+    flex: 0 0 auto;
+    width: 80%;
+    height: 100%;
+    scroll-snap-align: start;
+    margin-right: 14px;
+}
+.scroll-area > img{
+    border-radius: 10px;
+}
+.scroll-area:last-child{
+    margin-right: 0;
+}
+.scroll_wrap::-webkit-scrollbar {
+    display: none;
+}
+.tabs {
+    display: flex;
+    overflow-x: scroll;
+    -ms-overflow-style: none;
+    /* 인터넷 익스플로러 */
+    scrollbar-width: none;
+    /* 파이어폭스 */
+    margin: 20px 0;
+}
+
+.tabs::-webkit-scrollbar {
+    display: none;
+}
+
+ul.tabs li {
+    background: none;
+    color: #222;
+    display: inline-block;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+ul.tabs li.current {
+    background: #ededed;
+    color: #222;
+}
+
+.tab-content {
+    display: none;
+}
+
+.tab-content.current {
+    display: block;
+}
+
 footer {}
