--- a/css/moblie.css
+++ b/css/moblie.css
@@ -48,7 +48,7 @@ img {
 #header {
     width: 100%;
     height: 60px;
-    position: relative;
+    position: fixed;
     z-index: 2;
     background-color: #222;
 }
@@ -98,8 +98,8 @@ img {
 
 .move_btn div {
     width: 24px;
-    height: 3px;
-    margin: 4px 0;
+    height: 2px;
+    margin: 6px 0;
     background-color: #fff;
 }
 
@@ -111,19 +111,19 @@ img {
 .move_btn::after {
     content: '';
     display: block;
-    height: 3px;
+    height: 2px;
     background-color: #fff;
     position: relative;
     width: 24px;
 }
 
 .move_btn.on::before {
-    transform: translateY(7px) rotate(45deg);
+    transform: translateY(8px) rotate(45deg);
     transition: 0.5s;
 }
 
 .move_btn.on::after {
-    transform: translateY(-7px) rotate(-45deg);
+    transform: translateY(-8px) rotate(-45deg);
     transition: 0.5s;
 }
 
