--- a/css/moblie.css
+++ b/css/moblie.css
@@ -14,6 +14,7 @@ body::-webkit-scrollbar {
 }
 h1~h6,p,span{
     font-family: 'Noto Sans KR', sans-serif;
+    letter-spacing: -0.25px;
 }
 a,
 a:hover {
@@ -34,6 +35,7 @@ button {
 
 img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
     display: block;
 }
@@ -140,18 +142,18 @@ img {
     padding: 8px 0;
 }
 
-.Depth2>li>a {
+.Depth2>li>a,.ft_Depth2>li>a {
     font-size: 16px;
     font-weight: 400;
     color: #C3C3C3;
 }
 
-.Depth2 {
+.Depth2,.ft_Depth2 {
     padding-top: 16px;
     display: none;
 }
 
-.Depth2.on {
+.Depth2.on,.ft_Depth2.on {
     display: block;
 }
 .icon {
@@ -219,6 +221,7 @@ main {
     border-radius: 0;
 }
 .text_wrap {
+    width: 100%;
     position: absolute;
     left: 20px;
     bottom: 18%;
@@ -339,9 +342,6 @@ ul.tabs li.current {
 }
 
 .swiper-slide{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border-radius: 10px;
     overflow: hidden;
 }
@@ -391,7 +391,7 @@ ul.tabs li.current {
 .service{
     padding-top: 40px;
 }
-.service_wrappay > div{
+.service_wrappay > div, .life_wrappay > div{
     margin-bottom: 24px;
 }
 .tit_Wrap.service_text > p:first-child{
@@ -419,10 +419,12 @@ ul.tabs li.current {
     margin-right: 0;
     margin-top: 8px;
 }
-.swiper-slide.service_item.last,.swiper-slide.card.last{
+.swiper-slide.service_item.last,.swiper-slide.card.last,.swiper-slide.lifewrap.last{
     width: 20px;
 }
-
+.swiper-slide .life_item.last{
+    width: 20px;
+}
 .swiper-slide.service_item:nth-child(1){
     background: url(../imges/card_bg_01.png);
     background-size: cover;
@@ -441,4 +443,81 @@ ul.tabs li.current {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.life{
+    background: #F5F5F5;
+    padding: 60px 0 20px 0;
+}
+.swiper-slide.lifewrap{
+    width: 280px;
+    height: 340px;
+    display: block;
+}
+.swiper-slide .life_item{
+    width: 280px;
+    height: 340px;
+    justify-content: flex-start;
+    overflow: hidden;
+    display: block;
+}
+.ft_Depth1 li{
+    padding: 10px 0;
+    position: relative;
+}
+.ft_Depth1 > li > a{
+    width: 100%;
+    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color:#fff;
+}
+
+.ft_Depth1 li > a > .icon{
+    position: absolute;
+    right: 0px;
+}
+.footer{
+    overflow: hidden;
+}
+.footer_top,.footer_bottom{
+    padding: 40px 20px 40px 20px;
+    background: #222222;
+}
+
+.footer_bottom{
+    background: #2C2C2C;
+}
+
+.caution{
+    padding: 20px 0 0 0;
+}
+.nice-select.wide.nation{
+    width: 100% !important;
+    margin-right: 0;
+    margin-top: 8px;
+}
+.Global{
+    display: flex;
+    flex-direction: column;
+}
+
+.add{
+    padding-top: 36px;
+}
+.add > span{
+    font-size: 1.25em;
+    color: #fff;
+}
+.Global_tit{
+    font-size: 1.25em;
+    color: #fff;
+    display: block;
+    padding-bottom: 24px;
+}
+.caution > p{
+    color: #fff;
+    line-height: 24px;
+    padding: 8px 0;
 }
