--- a/css/moblie.css
+++ b/css/moblie.css
@@ -1,21 +1,33 @@
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
-html{
+
+html {
     overflow-x: hidden;
 }
+
 body {
     overflow-x: hidden;
     font-family: 'Noto Sans KR', sans-serif;
     word-break: keep-all;
     height: calc(var(--vh, 1vh) * 100);
-    -ms-overflow-style:none; 
+    -ms-overflow-style: none;
+    overflow: scroll-y;
+    -webkit-overflow-scrolling: touch;
+    transform: translate3d(0, 0, 0);
+    -webkit-transform: translateZ(0);
+    -webkit-overflow-scrolling: touch;
 }
+
 body::-webkit-scrollbar {
     display: none;
 }
-h1~h6,p,span{
+
+h1~h6,
+p,
+span {
     font-family: 'Noto Sans KR', sans-serif;
     letter-spacing: -0.25px;
 }
+
 a,
 a:hover {
     text-decoration: none;
@@ -76,7 +88,7 @@ img {
     width: 140px;
     height: 10px;
     display: block;
-    
+
 }
 
 .login_wrap {
@@ -142,20 +154,24 @@ img {
     padding: 8px 0;
 }
 
-.Depth2>li>a,.ft_Depth2>li>a {
+.Depth2>li>a,
+.ft_Depth2>li>a {
     font-size: 16px;
     font-weight: 400;
     color: #C3C3C3;
 }
 
-.Depth2,.ft_Depth2 {
+.Depth2,
+.ft_Depth2 {
     padding-top: 16px;
     display: none;
 }
 
-.Depth2.on,.ft_Depth2.on {
+.Depth2.on,
+.ft_Depth2.on {
     display: block;
 }
+
 .icon {
     display: flex;
     align-items: center;
@@ -163,6 +179,7 @@ img {
     right: 40px;
     transition: 0.5s;
 }
+
 .icon.on {
     transform: rotate(180deg);
 }
@@ -217,9 +234,11 @@ main {
 .swiper-slide {
     position: relative;
 }
-.swiper-slide.main{
+
+.swiper-slide.main {
     border-radius: 0;
 }
+
 .text_wrap {
     width: 100%;
     position: absolute;
@@ -320,9 +339,11 @@ ul.tabs li {
     margin: 0 4px;
     font-size: 14px;
 }
-ul.tabs li:first-child{
+
+ul.tabs li:first-child {
     margin-left: 0;
 }
+
 ul.tabs li.current {
     background: #3B3B3B;
     color: #fff;
@@ -341,10 +362,11 @@ ul.tabs li.current {
     height: 100%;
 }
 
-.swiper-slide{
+.swiper-slide {
     border-radius: 10px;
     overflow: hidden;
 }
+
 .swiper-slide.card {
     width: 320px;
     height: 280px;
@@ -357,7 +379,8 @@ ul.tabs li.current {
     object-fit: cover;
     border-radius: 10px;
 }
-.card_text{
+
+.card_text {
     position: absolute;
     width: 100%;
     height: 80px;
@@ -368,155 +391,185 @@ ul.tabs li.current {
     align-items: center;
     justify-content: space-between;
 }
-.tit_Wrap{
+
+.tit_Wrap {
     padding: 20px;
 }
-.tit_Wrap > p{
+
+.tit_Wrap>p {
     color: #fff;
     font-size: 0.95em;
     padding: 2px 0;
     font-weight: 100;
 }
-.tit_Wrap > p:nth-child(1){
+
+.tit_Wrap>p:nth-child(1) {
     font-size: 1.25em;
     font-weight: 400;
 }
-.card_btn{
+
+.card_btn {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     margin-right: 14px;
     background: none;
 }
-.service{
+
+.service {
     padding-top: 40px;
 }
-.service_wrappay > div, .life_wrappay > div{
+
+.service_wrappay>div,
+.life_wrappay>div {
     margin-bottom: 24px;
 }
-.tit_Wrap.service_text > p:first-child{
+
+.tit_Wrap.service_text>p:first-child {
     display: block;
     font-size: 20px;
     font-weight: bold;
     padding: 4px 0;
     margin-bottom: 8px;
 }
-.tit_Wrap.service_text > p{
+
+.tit_Wrap.service_text>p {
     line-height: 18px;
     font-size: 0.95em;
     font-weight: 300;
     letter-spacing: -0.25px;
 }
-.swiper-slide.service_item{
+
+.swiper-slide.service_item {
     width: 320px;
     height: 180px;
     justify-content: flex-start;
     overflow: hidden;
 }
-.service .card_btn{
+
+.service .card_btn {
     width: 24px;
     height: 24px;
     margin-right: 0;
     margin-top: 8px;
 }
-.swiper-slide.service_item.last,.swiper-slide.card.last,.swiper-slide.lifewrap.last{
+
+.swiper-slide.service_item.last,
+.swiper-slide.card.last,
+.swiper-slide.lifewrap.last {
     width: 20px;
 }
-.swiper-slide .life_item.last{
+
+.swiper-slide .life_item.last {
     width: 20px;
 }
-.swiper-slide.service_item:nth-child(1){
+
+.swiper-slide.service_item:nth-child(1) {
     background: url(../imges/card_bg_01.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-.swiper-slide.service_item:nth-child(2){
+
+.swiper-slide.service_item:nth-child(2) {
     background: url(../imges/card_bg_02.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    
+
 }
-.swiper-slide.service_item:nth-child(3){
+
+.swiper-slide.service_item:nth-child(3) {
     background: url(../imges/card_bg_03.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
-.life{
+.life {
     background: #F5F5F5;
     padding: 60px 0 20px 0;
 }
-.swiper-slide.lifewrap{
+
+.swiper-slide.lifewrap {
     width: 280px;
     height: 340px;
     display: block;
 }
-.swiper-slide .life_item{
+
+.swiper-slide .life_item {
     width: 280px;
     height: 340px;
     justify-content: flex-start;
     overflow: hidden;
     display: block;
 }
-.ft_Depth1 li{
+
+.ft_Depth1 li {
     padding: 10px 0;
     position: relative;
 }
-.ft_Depth1 > li > a{
+
+.ft_Depth1>li>a {
     width: 100%;
     display: block;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color:#fff;
+    color: #fff;
 }
 
-.ft_Depth1 li > a > .icon{
+.ft_Depth1 li>a>.icon {
     position: absolute;
     right: 0px;
 }
-.footer{
+
+.footer {
     overflow: hidden;
 }
-.footer_top,.footer_bottom{
+
+.footer_top,
+.footer_bottom {
     padding: 40px 20px 40px 20px;
     background: #222222;
 }
 
-.footer_bottom{
+.footer_bottom {
     background: #2C2C2C;
 }
 
-.caution{
+.caution {
     padding: 20px 0 0 0;
 }
-.nice-select.wide.nation{
+
+.nice-select.wide.nation {
     width: 100% !important;
     margin-right: 0;
     margin-top: 8px;
 }
-.Global{
+
+.Global {
     display: flex;
     flex-direction: column;
 }
 
-.add{
+.add {
     padding-top: 36px;
 }
-.add > span{
+
+.add>span {
     font-size: 1.25em;
     color: #fff;
 }
-.Global_tit{
+
+.Global_tit {
     font-size: 1.25em;
     color: #fff;
     display: block;
     padding-bottom: 24px;
 }
-.caution > p{
+
+.caution>p {
     color: #fff;
     line-height: 24px;
     padding: 8px 0;
