--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,13 @@ header a {
 
 .logo {
     z-index: 10;
-    width: 100px;
+    background: url(../imges/logo_w.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 150px;
+    height: 10px;
+    display: block;
 }
 
 .info {
@@ -508,7 +514,8 @@ nav .gnb>li:hover:after {
     overflow: hidden;
     position: relative;
     background: rgb(240, 240, 240);
-    padding-top: 120px;
+    padding-top: 140px;
+    height: 800px;
 }
 
 .Boxster>.swiper-slide {
@@ -845,7 +852,9 @@ nav .gnb>li:hover:after {
 .view_header .listbtn .line {
     background-color: #353535;
 }
-
+.swiper.top_slide{
+    overflow: hidden;
+}
 .top_slide_wrappy {
     width: 100%;
     height: 60px;
