--- a/css/moblie.css
+++ b/css/moblie.css
@@ -20,7 +20,9 @@ body {
 body::-webkit-scrollbar {
     display: none;
 }
-
+.toggle_menu::-webkit-scrollbar {
+    display: none;
+}
 h1~h6,
 p,
 span {
@@ -68,11 +70,8 @@ img {
 #header {
     width: 100%;
     height: 60px;
-    position: fixed;
-    z-index: 2;
     background-color: #222;
 }
-
 .headerInner {
     position: relative;
     max-width: 750px;
@@ -188,7 +187,6 @@ img {
 }
 
 .toggle_menu {
-    height: calc(var(--vh, 1vh) * 100);
     transform: translateX(100%);
     background-color: #222;
     padding-top: 24px;
@@ -197,6 +195,8 @@ img {
     opacity: 0;
     visibility: hidden;
     margin-top: -1px;
+    position: relative;
+    z-index: 20;
 }
 
 .toggle_menu.on {
