--- a/css/moblie.css
+++ b/css/moblie.css
@@ -262,10 +262,6 @@ main {
     text-align: left;
 }
 
-.text_wrap>button {
-    margin-left: 40px;
-}
-
 .text_wrap .tit {
     font-size: 2.63em;
     font-weight: bold;
@@ -577,4 +573,16 @@ ul.tabs li.current {
     color: #fff;
     line-height: 24px;
     padding: 8px 0;
+}
+
+@media (max-width: 820px) {
+    .toggle_menu.inner{
+        padding: 0 40px;
+    }
+}
+
+@media (max-width: 768px) {
+    .toggle_menu.inner{
+        padding: 0 20px;
+    }
 }
