--- a/css/moblie.css
+++ b/css/moblie.css
@@ -36,7 +36,9 @@ a:hover {
     font-family: 'Noto Sans KR', sans-serif;
     letter-spacing: -0.25px;
 }
-
+li,ol{
+    list-style: none;
+}
 button {
     background: inherit;
     border: none;
@@ -163,13 +165,22 @@ img {
     color: #C3C3C3;
 }
 
-.Depth2,
+.Depth2{
+    display: none;
+    transition: 0.5s;
+    padding-top: 16px;
+    transition: 0.5s;
+    height: 0;
+}
+.Depth1.on .Depth2{
+    display: block;
+    transition: 0.5s;
+    height: auto;
+}
 .ft_Depth2 {
     padding-top: 16px;
     display: none;
 }
-
-.Depth2.on,
 .ft_Depth2.on {
     display: block;
 }
@@ -178,18 +189,18 @@ img {
     display: flex;
     align-items: center;
     position: absolute;
-    right: 0px;
+    right: 20px;
     transition: 0.5s;
 }
 
-.icon.on {
+.Depth1.on .icon {
     transform: rotate(180deg);
 }
 
 .toggle_menu {
     transform: translateX(100%);
     background-color: #222;
-    padding-top: 24px;
+    padding-top: 32px;
     overflow-y: scroll;
     transition: 0.5s;
     opacity: 0;
@@ -218,7 +229,9 @@ img {
 .car_menu {
     height: calc(var(--vh, 1vh) * 100);
 }
-
+.Depth1{
+    padding: 14px 0;
+}
 .Depth1>a {
     display: flex;
     align-items: center;
@@ -577,12 +590,18 @@ ul.tabs li.current {
 
 @media (max-width: 820px) {
     .toggle_menu.inner{
-        padding: 0 40px;
+        padding: 32px 40px;
+    }
+    .icon{
+        right: 32px;
     }
 }
 
 @media (max-width: 768px) {
     .toggle_menu.inner{
-        padding: 0 20px;
+        padding: 32px 20px;
+    }
+        .icon{
+        right: 20px;
     }
 }
