--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,76 @@
     /* Support for IE. */
     font-feature-settings: 'liga';
 }
-
+.ani{
+    position: absolute;
+    bottom:80px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+}
+.ani a {
+  padding-top: 60px;
+  display: block;
+  color: #fff;
+}
+.ani a span {
+  position: absolute;
+  bottom:20px;
+  left: 50%;
+  width: 30px;
+  height: 50px;
+  margin-left: -15px;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  box-sizing: border-box;
+  margin-bottom: 12px;
+}
+.ani a span::before {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  content: '';
+  width: 6px;
+  height: 6px;
+  margin-left: -3px;
+  background-color: #fff;
+  border-radius: 100%;
+  -webkit-animation: sdb 2s infinite;
+  animation: sdb 2s infinite;
+  box-sizing: border-box;
+}
+@-webkit-keyframes sdb {
+  0% {
+    -webkit-transform: translate(0, 0);
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: translate(0, 20px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes sdb {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    transform: translate(0, 20px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 a,
 a:hover {
     text-decoration: none;
@@ -289,7 +358,7 @@ nav .gnb>li:hover:after {
     visibility: visible;
     transition: 0.5s;
     opacity: 1;
-    z-index: 10;
+    z-index: 15;
 }
 
 .full_inner {
